--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "strapi start",
     "strapi": "strapi",
     "upgrade": "npx @strapi/upgrade latest",
-    "upgrade:dry": "npx @strapi/upgrade latest --dry"
+    "upgrade:dry": "npx @strapi/upgrade latest --dry",
+    "prepare": "husky"
   },
   "dependencies": {
     "@strapi/plugin-cloud": "5.31.2",
@@ -31,6 +32,7 @@
     "@types/node": "^20.19.26",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "husky": "^9.1.7",
     "typescript": "^5"
   },
   "engines": {
